tests/negative/neg_string_channel.safe
-- Test: neg_string_channel
-- Description: Channel element types of String remain outside PR11.2.
-- Expected: REJECT unsupported_source_construct

package Neg_String_Channel

   channel Text_Ch : String capacity 1;


